<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/main_back"
    tools:context=".loginpage">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="#347E7979"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_log_in"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="true"
            android:textColor="@color/mentCream"
            android:textSize="45sp"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/email"
            android:textColor="#969696"/>
        <EditText
            android:id="@+id/login_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="#c6c6c6"
            tools:ignore="Autofill" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="#969696"/>
        <EditText
            android:id="@+id/login_etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:layout_margin="25dp"
            android:textColor="#fff"
            android:textColorHint="#c6c6c6"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_back_login"
            android:text="@string/main_log_in"
            android:layout_margin="25dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#969696"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="10dp"
            android:background="#00000000"
            android:textColor="#fff"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>