<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    tools:context=".RegisterUser">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#347E7979"
        app:cardUseCompatPadding="false"
        app:strokeColor="#000"
        app:cardElevation="0dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/mentCream"
            android:textSize="32sp"
            android:layout_marginBottom="10dp"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="NAME"
            android:textColor="#969696"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:textColor="#ffff"
            android:textColorHint="#c9c9c9"
            tools:ignore="Autofill" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="PHONE"
            android:textColor="#969696"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:textColor="#ffff"
            android:textColorHint="#c9c9c9"
            tools:ignore="Autofill" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/email"
            android:textColor="#969696"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:textColor="#ffff"
            android:textColorHint="#c9c9c9"
            tools:ignore="Autofill" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textAllCaps="true"
            android:text="@string/password"
            android:textColor="#969696"/>

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:textColorHint="#c9c9c9"
            tools:ignore="Autofill" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="#969696"/>

        <EditText
            android:id="@+id/etConfPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:layout_marginBottom="10dp"
            android:textColorHint="#c9c9c9"
            tools:ignore="Autofill" />


            <Button
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back_login"
                android:text="@string/sign_up"
                android:layout_marginBottom="20dp"
                android:textColor="#000"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have account"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#9B9B9B"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_log_in"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:textColor="#fff"
            />
    </LinearLayout>

    </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>