<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sell"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/mentCream"
        android:fontFamily="@font/bangers"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:verticalScrollbarPosition="defaultPosition"
        android:layout_marginVertical="60dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical">


            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_back_login"
                android:entries="@array/crops_names"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="WEIGHT"
                android:textColor="@color/mentCream"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/mentCream" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/kg"
                    android:textColor="@color/mentCream"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="PRICE"
                android:textColor="@color/mentCream"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/mentCream" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/rs"
                    android:textColor="@color/mentCream"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Description"
                android:textColor="@color/mentCream"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/mentCream" />


            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_back_login"
                android:elevation="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="#000"

                />


        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ivOff"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_signal_wifi_off"
        />
</RelativeLayout>